# GameEngine

./: .clang_complete  .gcc_flags.json  CMakeLists.txt  GEproject  GameEngine.kdev4  Makefile  cmake_install.cmake  ibouvousaime
.kdev4/: GameEngine.kdev4
include/: .#mat4.h
src/: .#Vector3.cpp  .#Vertex.cpp  Vector3.cpp~  main.cpp  main.cpp~
src/Math/: .kdev_include_paths
src/core/: mathutils.hpp~  mathutils.h~  meshutils.hpp  meshutils.hpp~  meshutils.h~  renderer.hpp  renderer.h~  window.hpp  window.h~
